[package]
name = "http_req"
version = "0.5.3"
license = "MIT"
description = "simple and lightweight HTTP client with built-in HTTPS support"
repository = "https://github.com/jayjamesjay/http_req"
authors = ["jayjamesjay"]
readme = "README.md"
categories = ["web-programming::http-client", "network-programming"]
keywords = ["http", "client", "request"]
edition = "2018"
exclude = [ "sgx/*", ]

[dependencies]
unicase = { git = "https://github.com/mesalock-linux/unicase-sgx", tag = "sgx_1.0.9" }
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk", optional = true, features = ["net"], tag = "v1.0.9"}

[features]
default = ["rust-tls", "mesalock_sgx"]
rust-tls = ["rustls", "webpki", "webpki-roots"]
mesalock_sgx = ["sgx_tstd"]

#[dependencies.native-tls]
#version = "^0.2"
#optional = true

[dependencies.rustls]
#version = "^0.15"
git = "https://github.com/mesalock-linux/rustls"
tag = "sgx_1.0.9"
optional = true

[dependencies.webpki]
#version = "^0.19"
git = "https://github.com/mesalock-linux/webpki"
tag = "sgx_1.0.9"
optional = true

[dependencies.webpki-roots]
#version = "^0.16"
git = "https://github.com/mesalock-linux/webpki-roots"
tag = "sgx_1.0.9"
optional = true

[badges]
travis-ci = { repository = "jayjamesjay/http_req"}
